<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/scrllvwNo1" 
android:layout_width="fill_parent" 
android:layout_height="wrap_content">
<LinearLayout 
	android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:padding="10dp">
	<TextView
		android:text="@string/formHeadSubject"
		style="@style/formHead"/>
	<Spinner 
       	android:id="@+id/subject_spinner"
       	android:layout_width="fill_parent"
       	android:layout_height="wrap_content"
       	android:prompt="@string/subject_prompt"/>

	<TextView
		android:text="@string/formHeadGrade" 
		style="@style/formHead"/>
	<Spinner 
       	android:id="@+id/grade_spinner"
       	android:layout_width="fill_parent"
       	android:layout_height="wrap_content"
       	android:prompt="@string/grades_prompt"
       	android:entries="@array/grade_16_string"
       	android:entryValues="@array/grade_16_int"
    	/>
    
    <TextView
		android:text="@string/formHeadWeight" 
		style="@style/formHead"/>
	<Spinner 
       	android:id="@+id/grade_weight_spinner"
       	android:layout_width="fill_parent"
       	android:layout_height="wrap_content"
       	android:prompt="@string/grade_weight_prompt"
       	android:entries="@array/grade_weight_string"
       	android:entryValues="@array/grade_weight_int"
    	/>
    	
    <TextView
		android:text="@string/formHeadGradeType" 
		style="@style/formHead"/>
	<Spinner 
       	android:id="@+id/grade_type_spinner"
       	android:layout_width="fill_parent"
       	android:layout_height="wrap_content"
       	android:prompt="@string/grades_type_prompt"
       	android:entries="@array/grade_type_string"
       	android:entryValues="@array/grade_type_int"
    	/>

	<TextView 
		android:id="@+id/dateDisplay"
        style="@style/formHead"
        android:text="" />
    <Button android:id="@+id/pickDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Datum"/>

	<Button android:id="@+id/confirm"
	    android:text="@string/confirm"
		style="@style/formSaveButton" />

</LinearLayout>
</ScrollView>